Workaround for -generate-spacing-alias unbound variable bug

--- a/app/sass/settings/_liberator.scss
+++ b/app/sass/settings/_liberator.scss
@@ -21,4 +21,3 @@ $base-font-stack: Georgia, Cambria, "Times New Roman", Times, serif;
 
 $inuit-enable-margins--large: true;
 $inuit-enable-responsive-margins: true;
-$inuit-generate-spacing-alias: s;
